--- a/Transfer_Learning_Assignment.ipynb
+++ b/Transfer_Learning_Assignment.ipynb
@@ -267,6 +267,472 @@
     "along with the predicted label, allowing us to visualize the prediction made by the model.\n",
     "Now that we have evaluated how the mobilenetv2 works, let us do the transfer learning."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset for Our new model\n",
+    "\n",
+    "THE CIFAR-10 DATASET: it is a dataset of 50,000 32x32 color training images and 10,000 test images, labeled over 10 categories."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the full CIFAR-10 dataset\n",
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
+    "\n",
+    "# the percentage of data that we want to use (10%)\n",
+    "data_percentage = 0.1\n",
+    "\n",
+    "# Calculate the number of samples to load\n",
+    "train_samples = int(x_train.shape[0] * data_percentage)\n",
+    "test_samples = int(x_test.shape[0] * data_percentage)\n",
+    "\n",
+    "# Select only a subset of the training and testing data\n",
+    "x_train_subset = x_train[:train_samples]\n",
+    "y_train_subset = y_train[:train_samples]\n",
+    "x_test_subset = x_test[:test_samples]\n",
+    "y_test_subset = y_test[:test_samples]\n",
+    "\n",
+    "# validation data\n",
+    "x_val = x_train_subset[:1000]\n",
+    "y_val = y_train_subset[:1000]\n",
+    "\n",
+    "# Confirm the shapes of the subsets\n",
+    "print(f\"Training data shape: {x_train_subset.shape}, Labels shape: {y_train_subset.shape}\")\n",
+    "print(f\"Test data shape: {x_test_subset.shape}, Labels shape: {y_test_subset.shape}\")\n",
+    "print(f\"Validation data shape: {x_val.shape}, Labels shape: {y_val.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I realised that I had to resize the images from 32 * 32 to 224 * 224 in order to match the input shape of our model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Resize the images to match the input shape of the model\n",
+    "x_train_resized = tf.image.resize(x_train_subset, IMAGE_SHAPE)\n",
+    "x_test_resized = tf.image.resize(x_test_subset, IMAGE_SHAPE)\n",
+    "x_val_resized = tf.image.resize(x_val, IMAGE_SHAPE)\n",
+    "\n",
+    "# check the shape of the resized images\n",
+    "print(x_train_resized.shape)\n",
+    "print(x_test_resized.shape)\n",
+    "print(x_val_resized.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the class names are not included with the dataset, so we'll specify them here\n",
+    "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# # Normalize the pixel values by dividing by 255S\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_normalized = x_train_resized / 255.0\n",
+    "x_test_normalized = x_test_resized / 255.0\n",
+    "x_val_normalized = x_val_resized / 255.0\n",
+    "print(x_train_normalized.shape)\n",
+    "print(x_test_normalized.shape)\n",
+    "print(x_val_normalized.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the first 10 images from the training set and display the class name below each image\n",
+    "plt.figure(figsize=(10, 1))\n",
+    "for i in range(10):\n",
+    "    plt.subplot(1, 10, i+1)\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.grid(False)\n",
+    "    plt.imshow(x_train_normalized[i], cmap=plt.cm.binary)\n",
+    "    plt.xlabel(class_names[y_train[i][0]])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FEATURE EXTRACTION      \n",
+    "\n",
+    "Create the feature extractor by wrapping the pre-trained model as a Keras layer with hub.KerasLayer. And, use the trainable=False argument to freeze the variables, so that the training only modifies the new classifier layer      \n",
+    "\n",
+    "\n",
+    "## 1st Model: MobileNetV2    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the MobileNetV2 model withoout the top classification layer\n",
+    "pretrained_base = hub.KerasLayer(classifier_model, input_shape=(224, 224, 3), trainable=False)\n",
+    "\n",
+    "# layers for fine-tuning\n",
+    "model = tf_keras.Sequential([\n",
+    "    pretrained_base,\n",
+    "    tf_keras.layers.Flatten(),\n",
+    "    tf_keras.layers.Dense(1024, activation='relu'),\n",
+    "    tf_keras.layers.Dense(512, activation='relu'),\n",
+    "    tf_keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "start = datetime.datetime.now()\n",
+    "model.fit(x_train_normalized, y_train_subset, epochs=2, validation_data=(x_val_normalized, y_val))\n",
+    "end = datetime.datetime.now()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate the model\n",
+    "model.evaluate(x_test_normalized, y_test_subset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detailed Performance Metric\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "# predict the data on the mobileNetV2 model\n",
+    "predicted = model.predict(x_test_normalized)\n",
+    "\n",
+    "# Display the first 10 images from the test set and display the predicted class name below each image\n",
+    "plt.figure(figsize=(10, 1))\n",
+    "for i in range(10):\n",
+    "    plt.subplot(1, 10, i+1)\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.grid(False)\n",
+    "    plt.imshow(x_test_normalized[i], cmap=plt.cm.binary)\n",
+    "    predicted_label = np.argmax(predicted[i])\n",
+    "    true_label = y_test_subset[i][0]\n",
+    "    if predicted_label == true_label:\n",
+    "        color = 'green'\n",
+    "    else:\n",
+    "        color = 'red'\n",
+    "    plt.xlabel(f'{class_names[predicted_label]}', color=color)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print classification report\n",
+    "print(classification_report(y_test_subset, np.argmax(predicted, axis=1), target_names=class_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result Visualisation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Plot the confusion matrix\n",
+    "cm = confusion_matrix(y_test_subset, np.argmax(predicted, axis=1))\n",
+    "plt.imshow(cm, cmap=plt.cm.Blues)\n",
+    "plt.xlabel(\"Predicted labels\")\n",
+    "plt.ylabel(\"True labels\")\n",
+    "plt.xticks([], [])\n",
+    "plt.yticks([], [])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2ND MODEL: ResNet50\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URLs for the pre-trained models from TensorFlow Hub\n",
+    "mobilenet_v2 = \"https://tfhub.dev/google/tf2-preview/mobilenet_v2/classification/4\"\n",
+    "resnet_50 = \"https://tfhub.dev/tensorflow/resnet_50/classification/1\"\n",
+    "inception_v3 = \"https://tfhub.dev/google/imagenet/inception_v3/classification/5\"\n",
+    "\n",
+    "\n",
+    "second_classifier_model = resnet_50\n",
+    "third_classifier_model = inception_v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Sequential model with the pre-trained ResNet-50 classifier\n",
+    "second_classifier = tf_keras.Sequential([\n",
+    "    hub.KerasLayer(second_classifier_model, input_shape=IMAGE_SHAPE+(3,))\n",
+    "])\n",
+    "\n",
+    "# layers for fine-tuning\n",
+    "second_model = tf_keras.Sequential([\n",
+    "    second_classifier,\n",
+    "    tf_keras.layers.Flatten(),\n",
+    "    tf_keras.layers.Dense(1024, activation='relu'),\n",
+    "    tf_keras.layers.Dense(512, activation='relu'),\n",
+    "    tf_keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "second_model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "start = datetime.datetime.now()\n",
+    "second_model.fit(x_train_normalized, y_train_subset, epochs=2, validation_data=(x_val_normalized, y_val))\n",
+    "end = datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate the model\n",
+    "second_model.evaluate(x_test_normalized, y_test_subset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detailed Performance Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predict the data on the second model\n",
+    "second_predicted = second_model.predict(x_test_normalized)\n",
+    "\n",
+    "# Display the first 10 images from the test set and display the predicted class name below each image\n",
+    "plt.figure(figsize=(10, 1))\n",
+    "for i in range(10):\n",
+    "    plt.subplot(1, 10, i+1)\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.grid(False)\n",
+    "    plt.imshow(x_test_normalized[i], cmap=plt.cm.binary)\n",
+    "    predicted_label = np.argmax(second_predicted[i])\n",
+    "    true_label = y_test_subset[i][0]\n",
+    "    if predicted_label == true_label:\n",
+    "        color = 'green'\n",
+    "    else:\n",
+    "        color = 'red'\n",
+    "    plt.xlabel(f'{class_names[predicted_label]}', color=color)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print classification report\n",
+    "print(classification_report(y_test_subset, np.argmax(second_predicted, axis=1), target_names=class_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the confusion matrix\n",
+    "cm = confusion_matrix(y_test_subset, np.argmax(second_predicted, axis=1))\n",
+    "plt.imshow(cm, cmap=plt.cm.Blues)\n",
+    "plt.xlabel(\"Predicted labels\")\n",
+    "plt.ylabel(\"True labels\")\n",
+    "plt.xticks([], [])\n",
+    "plt.yticks([], [])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3RD MODEL: InceptionV3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Sequential model with the pre-trained InceptionV3 classifier\n",
+    "third_classifier = tf_keras.Sequential([\n",
+    "    hub.KerasLayer(third_classifier_model, input_shape=IMAGE_SHAPE+(3,))\n",
+    "])\n",
+    "\n",
+    "# layers for fine-tuning\n",
+    "third_model = tf_keras.Sequential([\n",
+    "    third_classifier,\n",
+    "    tf_keras.layers.Flatten(),\n",
+    "    tf_keras.layers.Dense(1024, activation='relu'),\n",
+    "    tf_keras.layers.Dense(512, activation='relu'),\n",
+    "    tf_keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "third_model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "start = datetime.datetime.now()\n",
+    "third_model.fit(x_train_normalized, y_train_subset, epochs=2, validation_data=(x_val_normalized, y_val))\n",
+    "end = datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate the model\n",
+    "third_model.evaluate(x_test_normalized, y_test_subset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detailed Performance Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predict the data on the third model\n",
+    "third_predicted = third_model.predict(x_test_normalized)\n",
+    "\n",
+    "# Display the first 10 images from the test set and display the predicted class name below each image\n",
+    "plt.figure(figsize=(10, 1))\n",
+    "for i in range(10):\n",
+    "    plt.subplot(1, 10, i+1)\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.grid(False)\n",
+    "    plt.imshow(x_test_normalized[i], cmap=plt.cm.binary)\n",
+    "    predicted_label = np.argmax(third_predicted[i])\n",
+    "    true_label = y_test_subset[i][0]\n",
+    "    if predicted_label == true_label:\n",
+    "        color = 'green'\n",
+    "    else:\n",
+    "        color = 'red'\n",
+    "    plt.xlabel(f'{class_names[predicted_label]}', color=color)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print classification report\n",
+    "print(classification_report(y_test_subset, np.argmax(third_predicted, axis=1), target_names=class_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the confusion matrix\n",
+    "cm = confusion_matrix(y_test_subset, np.argmax(third_predicted, axis=1))\n",
+    "plt.imshow(cm, cmap=plt.cm.Blues)\n",
+    "plt.xlabel(\"Predicted labels\")\n",
+    "plt.ylabel(\"True labels\")\n",
+    "plt.xticks([], [])\n",
+    "plt.yticks([], [])\n"
+   ]
   }
  ],
  "metadata": {
